Ignore click of the empty area in actions row.

In NotificationViewMD, all clicks outside the action buttons and the
header trigger notifiation click event.
This behavior is confusing for the empty area in the actions row.
This CL changes the behavior to ignore such clicks by overriding
OnMousePressed in NotificationViewMD.

TEST=manual
BUG=775875

Change-Id: Id10437f031e7c462b6d0f4a5a272342b4f4142f9
Reviewed-on: https://chromium-review.googlesource.com/754421
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514898}
Former-commit-id: 6c144779d6b9194e60efd8dddddce5b825956e2a